Updated structure, updated DB, views and so on.

--- a/WebShop.Api/appsettings.json
+++ b/WebShop.Api/appsettings.json
@@ -1,5 +1,11 @@
 {
+  "SwaggerOptions": {
+    "JsonRoute": "swagger/{documentName}/swagger.json",
+    "Description": "Our API",
+    "UIEndpoint": "v1/swagger.json"
+  },
   "ConnectionStrings": {
+    "AppDbConnection" : "server=.//;Database=WebShopDb;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;",
     "WebShopConnection" : "server=.//;Database=WebShopDb;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;"
   },
   "Logging": {
