--- a/WebShop.IdentityServer/appsettings.json
+++ b/WebShop.IdentityServer/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "WebShopConnection" : "server=.//;Database=WebShopDb;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;",
-    "WebShopIdentityConnection" : "server=.//;Database=WebShopIdentityServer4;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;"
+    "IdentityConnection" : "server=.//;Database=MyIdentityDb;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;",
+    "IdentityServer4Connection" : "server=.//;Database=MyIdentityServer4;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;",
+    "AppDbConnection" : "server=.//;Database=WebShopDb;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;"
   },
   "Logging": {
     "LogLevel": {
