--- a/WebShop.Api/Properties/launchSettings.json
+++ b/WebShop.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "WebShop.Api": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5003;http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
