--- a/WebShop.IdentityServer/WebShop.IdentityServer.csproj
+++ b/WebShop.IdentityServer/WebShop.IdentityServer.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EmailService\EmailService.csproj" />
       <ProjectReference Include="..\WebShop.Data\WebShop.Data.csproj" />
     </ItemGroup>
 
