--- a/WebShop.IdentityServer/appsettings.Development.json
+++ b/WebShop.IdentityServer/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "MailSettings": {
+    "Mail": "webshopkzkz@gmail.com",
+    "DisplayName": "WebShopKz",
+    "Password": "RfhkUhfqvc5",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
