--- a/WebShop.IdentityServer/appsettings.json
+++ b/WebShop.IdentityServer/appsettings.json
@@ -4,6 +4,13 @@
     "IdentityServer4Connection" : "server=.//;Database=MyIdentityServer4;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;",
     "AppDbConnection" : "server=.//;Database=WebShopDb;Integrated Security=true;MultipleActiveResultSets=true;App=EntityFrameworkCore;Trusted_Connection=false;"
   },
+  "MailSettings": {
+    "Mail": "<yourmail>",
+    "DisplayName": "<name>",
+    "Password": "<pass>",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
