--- a/EmailService/EmailService.csproj
+++ b/EmailService/EmailService.csproj
@@ -4,4 +4,17 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MailKit" Version="2.10.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.10" />
+      <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
