--- a/Angular/webshop-app/package.json
+++ b/Angular/webshop-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "angular-auth-oidc-client": "^11.2.3",
+    "angular-i18n": "^1.8.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
